Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 5.3.13, 5.5, 10.0, 10.1
-
Fix Version/s: 5.5.50
-
Component/s: OTHER
-
Labels:
-
Sprint:10.0.25
Description
Output:
mysql> select 100 between 1 and 9223372036854775808;
|
+---------------------------------------+
|
| 100 between 1 and 9223372036854775808 |
|
+---------------------------------------+
|
| 0 |
|
+---------------------------------------+
|
1 row in set (0.00 sec)
|
Recreate:
select 100 between 1 and 9223372036854775808;
|
Problem:
========
1 is expected
Attachments
Issue Links
- relates to
-
MDEV-17698 MEMORY engine performance regression
-
- Closed
-