MDEV-9372 select 100 between 1 and 9223372036854775808 returns false

Integer comparison of INT expressions with different signess in BETWEEN
is not safe. Switching to DECIMAL comparison in case if INT arguments
have different signess.